--- a/MEDIA-QUERY/Q-1/Index.html
+++ b/MEDIA-QUERY/Q-1/Index.html
@@ -14,13 +14,13 @@
             <div class="navbar ">
                 <div class="container">
                     <div class="row items-center justify-between">
-                        <div class="col-1">
+                        <div class="col-1 col-xxl-1 col-xl-1">
                             <div class="logo ">
                                 <img src="./Asset/Images/pexels-magda-ehlers-pexels-1337380.jpg" alt="logo">
 
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6 col-xxl-6 col-xl-8">
                             <nav>
                                 <ul class="justify-end ">
                                     <div class="dropdown">
